--- a/stage9/static/stage9/css/home_view.css
+++ b/stage9/static/stage9/css/home_view.css
@@ -1,13 +1,13 @@
 .home_view {
     display: block;
-    margin-right: 10px;
+    margin-right: 0;
     padding: 5px;
     background: white;
     min-width:702px;
     width:100%;
     min-height: 500px;
     position: relative;
-    max-width: 980px;
+    max-width: 1050px;
     vertical-align: top;
 }
 
@@ -15,12 +15,17 @@
     max-width: 398px;
     display: inline-block;
     position: relative;
+    margin-right: 20px;
+}
+
+.side_categories {
+    margin-bottom: 4px;
 }
 
 .recipe_search_results_cont {
     display: inline-block;
-    max-width: 540px;
-    width: 540px;
+    max-width: 580px;
+    width: 580px;
     margin-right: 10px;
     position: relative;
     padding-bottom: 80px;
