--- a/stage9/templates/stage9/ajax_search.html
+++ b/stage9/templates/stage9/ajax_search.html
@@ -37,7 +37,7 @@
         <li>Pick a comfy way to choose the ingredients you plan on cooking.</li>
         <li>Add your ingredients by choosing them from the drop-down menu or by typing them in directly.</li>
         <li>Recipes you can make will automatically appear and update as you add more ingredients.</li>
-        <li><a href="{% url 'account_login' %}"><b>Login</b></a> with your favourite social media account or register for extra features.</li>
+        <li><span class="allauth-link" datatype="login"><b>Login</b></span> with your favourite social media account or <span class="allauth-link" datatype="register"><b>register</b></span> for extra features.</li>
     </ul>
     <p>Bon appétit!</p>
     {% endif %}
