--- a/stage9/templates/stage9/base.html
+++ b/stage9/templates/stage9/base.html
@@ -155,6 +155,9 @@
 
             <div class="container_body">
                 {% if user.is_authenticated %}
+                <div id="side_navbar_btn_hidden">
+                    <i id="side_navbar_meanu_icon_hidden" class="material-icons">menu</i>
+                </div>
                 <div id="side_navbar">
                     <div id="side_navbar_cont">
                         <div id="side_navbar_btn">
