--- a/stage9/static/stage9/css/base_view.css
+++ b/stage9/static/stage9/css/base_view.css
@@ -22,6 +22,12 @@
     font-size: 3em;
 }
 
+#side_navbar_meanu_icon_hidden {
+    margin-top: 3px;
+    color:black;
+    font-size: 3em;
+}
+
 #side_navbar_btn {
     background-color: white;
     width: 52px;
@@ -36,6 +42,27 @@
     border-bottom-left-radius: 10px;
     border-top-left-radius: 10px;
 }
+
+#side_navbar_btn_hidden {
+    background-color: white;
+    width: 52px;
+    height: 52px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-left: 2px solid #555555;
+    border-top: 2px solid #555555;
+    border-bottom: 2px solid #555555;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    display: none;
+}
+
+#side_navbar_btn_hidden:hover {
+    cursor: pointer;
+}
+
 
 #side_navbar_items_cont {
     position: relative;
@@ -203,4 +230,139 @@
 
 .msg_user:hover {
     cursor: pointer;
+}
+
+#top_bar_notifications {
+    display: inline-block;
+    font-size: 4em;
+    color: white;
+    margin-left: 78px;
+}
+
+#notification_wrap {
+    position: relative;
+    display: inline-block;
+}
+
+#top_bar_notifications:hover {
+    cursor: pointer;
+}
+
+#side_navbar_meanu_icon:hover {
+    cursor: pointer;
+}
+
+#notification_box_position {
+    top: 75px;
+    left: -308px;
+    position: absolute;
+}
+
+#notification_box {
+    display: none;
+    border: 1px solid #555555;
+    color: black;
+    position: relative;
+    z-index: 11;
+    background-color: white;
+    width: 450px;
+}
+
+#notification_box::after {
+    content: "";
+    position: absolute;
+    display: block;
+    border-style: solid;
+    border-width: 0 15px 15px ;
+    border-color: #FFFFFF transparent;
+    z-index: 12;
+    width: 0;
+    top: -13px;
+    left: 399px;
+}
+
+#notification_box::before {
+    content: "";
+    position: absolute;
+    top: -16px;
+    left: 398px;
+    border-style: solid;
+    border-width: 0 16px 16px ;
+    border-color: #000 transparent;
+    width: 0;
+    display: block;
+    z-index: 12;
+    overflow: auto;
+}
+
+.pointer:hover {
+    cursor: pointer;
+}
+
+.inline {
+    display: inline-block;
+}
+
+#notification_header {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    position: relative;
+    border-bottom: 1px solid darkgray;
+}
+
+#notifications_mark {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    font-weight: 500;
+    font-size: 9pt;
+}
+
+.img-profile-notifications {
+    display: inline;
+    width: 46px;
+    height: 46px;
+}
+
+.pic_left_note {
+    vertical-align: top;
+    text-align: center;
+    margin-right: 10px;
+}
+
+.notification{
+    position: relative;
+    background-color: #f5f5f5;
+    padding-left: 10px;
+}
+
+.notification:hover{
+    background-color: #ededed;
+}
+
+.x-note-pos {
+    position: absolute;
+    right: 8px;
+    top: 13px;
+    font-size: 10px;
+}
+
+.content_right_note {
+    max-width: 352px;
+}
+
+.notification_content {
+    margin-bottom: 2px;
+    font-weight: 500;
+}
+
+.timesince {
+    color: #878787;
+    font-size: 9pt;
+}
+
+.font-600 {
+    font-weight: 600;
 }
